# Smart-HR

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  repomix-output.xml
backend/: .dockerignore  .env.test  __init__.py  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/ai/: __init__.py  extractor.py  llm_client.py  matcher.py  parser.py  prompts.py  schemas.py  scorer.py  screener.py  skills_vocabulary.py
backend/app/core/: audit.py  config.py  constants.py  database.py  exceptions.py  export.py  filtering.py  pagination.py  schemas.py  security.py  sorting.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_ai_extractor.py  test_ai_llm.py  test_ai_matcher.py  test_ai_parser.py  test_ai_scorer.py  test_ai_screening_integration.py  test_attendance_routes.py  test_attendance_service.py  test_audit_logs_routes.py  test_auth_routes.py  test_auth_service.py  test_config.py  test_dashboard_routes.py  test_dashboard_service.py  test_department_service.py  test_designation_service.py  test_employee_routes.py  test_employee_service.py  test_exceptions.py  test_health.py  test_jwt_tokens.py  test_leave_service.py  test_models_import.py  test_notifications_routes.py  test_notifications_service.py  test_organization_routes.py  test_password_security.py  test_performance_routes.py  test_performance_service.py  test_recruitment_service.py  test_reporting_routes.py  test_schemas.py  test_security.py  test_startup.py  test_user_routes.py  test_user_service.py
docs/: API.md  (+8 more)
(+247 files in other folders)
